added CONFIG_HEXO_RESET_STACK_SIZE, fixed SoCLib memory checker support

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -70,6 +70,14 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_RESET_STACK_SIZE
+  desc Temporary processor boot stack size (log2)
+  flags value
+  default 12
+  parent CONFIG_HEXO
+%config end
+
+
 ######################################################################
 # Provided token, not definable by user directly
 
