Make memchecker usable with experimental allocator

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -51,7 +51,7 @@
   desc Enable instrumentation with the SocLib memory checker ISS wrapper
   parent CONFIG_ARCH_SOCLIB
   exclude CONFIG_MUTEK_MEMALLOC_GUARD
-  depend CONFIG_MUTEK_MEMALLOC_SMART
+  depend CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 %config end
 
 %config CONFIG_SOCLIB_MEMCHECK_ADDRESS
