--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -51,6 +51,7 @@
   provide CONFIG_CPU_RESET_SIZE=0x00000400
   provide CONFIG_CPU_EXCEPTION_FIXED_ADDRESS=0x0
   single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
+  provide CONFIG_HEXO_STACK_ALIGN=8
 %config end
 
 %config CONFIG_CPU_ARM_TLS_IN_C15
