--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -30,5 +30,6 @@
   provide CONFIG_CPU_RESET_SIZE=0x80
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
+  provide CONFIG_HEXO_STACK_ALIGN=16
 %config end
 
