--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -13,5 +13,6 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
+  provide CONFIG_HEXO_STACK_ALIGN=16
 %config end
 
