--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -15,6 +15,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
+  provide CONFIG_HEXO_STACK_ALIGN=16
 %config end
 
 %config CONFIG_CPU_X86_ALIGNCHECK
