--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -77,6 +77,12 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_STACK_ALIGN
+  desc Stack alignment constraint
+  flags value maxval
+  default 1
+  parent CONFIG_HEXO
+%config end
 
 ######################################################################
 # Provided token, not definable by user directly
