--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -62,6 +62,7 @@
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
   provide CONFIG_CPU_RESET_SIZE=0x2000
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
+  provide CONFIG_HEXO_STACK_ALIGN=8
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
