--- a/libm/Makefile
+++ b/libm/Makefile
@@ -1,5 +1,5 @@
 
-DIR_CFLAGS = -D_IEEE_LIBM 
+DIR_CFLAGS = -D_IEEE_LIBM -fno-strict-aliasing
 
 objs = 	k_standard.o k_rem_pio2.o \
 		k_cos.o k_sin.o k_tan.o \
