--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -80,3 +80,31 @@
   default defined
 %config end
 
+%config CONFIG_PTHREAD_ONCE
+  desc Provide support for pthread_once()
+  parent CONFIG_PTHREAD
+  depend CONFIG_PTHREAD_MUTEX
+  default undefined
+%config end
+
+%config CONFIG_PTHREAD_KEYS
+  desc Provide support for pthread_key_* functions
+  parent CONFIG_PTHREAD
+  depend CONFIG_PTHREAD_MUTEX
+  default undefined
+%config end
+
+%config CONFIG_PTHREAD_KEYS_MAX
+  desc Maximum number of pthread_key usable at the same time
+  flags value maxval
+  parent CONFIG_PTHREAD_KEYS
+  default 1
+%config end
+
+%config CONFIG_PTHREAD_KEYS_DESTRUCTOR_ITERATIONS
+  desc Maximum number of pthread_key iterations for destruction of keyed data
+  flags value maxval
+  parent CONFIG_PTHREAD_KEYS
+  default 1
+%config end
+
