--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -100,7 +100,8 @@
     CONFIG_HETROM_ADDR 0x60000000
     CONFIG_HETROM_SIZE 0x00100000
 
-    CONFIG_SOCLIB_EARLY_CONSOLE 0xd0200000
+    CONFIG_SOCLIB_EARLY_CONSOLE
+    CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
     # Device and drivers
     CONFIG_DRIVER_CHAR_SOCLIBTTY
 
