--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -23,6 +23,13 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_FPU                                                  
+  desc Enables hardware floating points support                          
+  flags auto                                                             
+  parent CONFIG_HEXO                                                     
+  exclude CONFIG_COMPILE_SOFTFLOAT                                       
+%config end                                                              
+
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
   flags auto
