pthread_spin use cpu atomic ops (instead of smp conditional hexo lock), minor pthread config fix

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -41,57 +41,55 @@
 %config CONFIG_PTHREAD_COND
   desc Enable pthread_cond_* primitives
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_BARRIER
   desc Enable pthread_barrier_* primitives
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_CANCEL
   desc Enable pthread_cancel support
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_JOIN
   desc Enable joinable pthread support
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_MUTEX
   desc Enable pthread_mutex_* primitives
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_MUTEX_ATTR
   desc Provide pthread mutex attributes support
   parent CONFIG_PTHREAD_MUTEX
-  default defined
+  when CONFIG_PTHREAD_MUTEX
 %config end
 
 %config CONFIG_PTHREAD_ATTRIBUTES
   desc Provide pthread thread attributes support
   parent CONFIG_PTHREAD
-  default defined
+  when CONFIG_PTHREAD
 %config end
 
 %config CONFIG_PTHREAD_ONCE
   desc Provide support for pthread_once()
   parent CONFIG_PTHREAD
   depend CONFIG_PTHREAD_MUTEX
-  default undefined
 %config end
 
 %config CONFIG_PTHREAD_KEYS
   desc Provide support for pthread_key_* functions
   parent CONFIG_PTHREAD
   depend CONFIG_PTHREAD_MUTEX
-  default undefined
 %config end
 
 %config CONFIG_PTHREAD_KEYS_MAX
