Guard driver objects for spi, block and i2c

--- a/drivers/block/Makefile
+++ b/drivers/block/Makefile
@@ -1,5 +1,7 @@
 
-objs = device_block.o
+ifeq ($(CONFIG_DRIVER_BLOCK), defined)
+objs += device_block.o
+endif
 
 ifeq ($(CONFIG_DRIVER_BLOCK_ATA), defined)
  subdirs += ata
