--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -1,5 +1,7 @@
 
-# objs += device_spi.o
+ifeq ($(CONFIG_DRIVER_SPI), defined)
+objs += device_spi.o
+endif
 
 ifeq ($(CONFIG_DRIVER_SPI_SPI6088D), defined)
  subdirs += spi6088d
