--- a/drivers/i2c/Makefile
+++ b/drivers/i2c/Makefile
@@ -1,5 +1,7 @@
 
+ifeq ($(CONFIG_DRIVER_I2C), defined)
 objs += device_i2c.o
+endif
 
 ifeq ($(CONFIG_DRIVER_I2C_TWI6061A), defined)
  subdirs += twi6061a
