--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -1,6 +1,6 @@
 
 ifeq ($(CONFIG_DRIVER_SPI), defined)
-objs += device_spi.o
+#objs += device_spi.o
 endif
 
 ifeq ($(CONFIG_DRIVER_SPI_SPI6088D), defined)
