Uniformize CONFIG_DRIVER_CHAR from CONFIG_DRIVER_TTY and CONFIG_DRIVER_UART

--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -1,5 +1,7 @@
 
-objs += device_char.o
+ifeq ($(CONFIG_DRIVER_CHAR), defined)
+ objs += device_char.o
+endif
 
 ifeq ($(CONFIG_DRIVER_CHAR_SOCLIBTTY), defined)
  subdirs += tty-soclib
