--- a/drivers/char/tty-soclib/tty-soclib.config
+++ b/drivers/char/tty-soclib/tty-soclib.config
@@ -2,7 +2,7 @@
 %config CONFIG_DRIVER_CHAR_SOCLIBTTY
   desc enable soclib TTY device support
   depend CONFIG_ARCH_SOCLIB
-  provide CONFIG_DRIVER_TTY
+  provide CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
 %config end
 
