--- a/drivers/char/uart-8250/uart-8250.config
+++ b/drivers/char/uart-8250/uart-8250.config
@@ -3,7 +3,7 @@
   desc enable intel 8250 uart device support
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_HEXO_IRQ
-  provide CONFIG_DRIVER_UART
+  provide CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
 %config end
 
