--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -11,16 +11,10 @@
   default defined
 %config end
 
-%config CONFIG_DRIVER_TTY
+%config CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
   flags meta
-  desc At least one tty device driver must be enabled to have it defined
-%config end
-
-%config CONFIG_DRIVER_UART
-  parent CONFIG_DEVICE
-  flags meta
-  desc At least one uart device driver must be enabled to have it defined
+  desc At least one character device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_NET
