--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -15,8 +15,7 @@
 
 %config CONFIG_MUTEK_CONSOLE
   desc Enable text console support
-  when CONFIG_DRIVER_TTY
-  when CONFIG_DRIVER_UART
+  when CONFIG_DRIVER_CHAR
   parent CONFIG_MUTEK
 %config end
 
