--- a/drivers/char/null/null.config
+++ b/drivers/char/null/null.config
@@ -2,5 +2,6 @@
 %config CONFIG_DRIVER_CHAR_NULL
   desc enable Null char pseudo device, EOF on read, eat everything on write
   parent CONFIG_DEVICE
+  provide CONFIG_DRIVER_CHAR
 %config end
 
