--- a/drivers/char/random/random.config
+++ b/drivers/char/random/random.config
@@ -4,5 +4,6 @@
   depend CONFIG_LIBCRYPTO_ARC4
   desc enable random stream generator pseudo device
   parent CONFIG_DEVICE
+  provide CONFIG_DRIVER_CHAR
 %config end
 
