--- a/drivers/char/tty-emu/tty-emu.config
+++ b/drivers/char/tty-emu/tty-emu.config
@@ -2,6 +2,6 @@
 %config CONFIG_DRIVER_CHAR_EMUTTY
   desc enable emulation TTY for Linux
   depend CONFIG_ARCH_EMU
-  provide CONFIG_DRIVER_TTY
+  provide CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
 %config end
