--- a/drivers/char/uart-us6089c/uart-us6089c.config
+++ b/drivers/char/uart-us6089c/uart-us6089c.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_US6089C_UART
   desc Enable Atmel US_6089c UART device support (SAMx, ...)
-  provide CONFIG_DRIVER_UART
+  provide CONFIG_DRIVER_CHAR
   parent CONFIG_DEVICE
 %config end
 
