--- a/drivers/char/zero/zero.config
+++ b/drivers/char/zero/zero.config
@@ -2,5 +2,6 @@
 %config CONFIG_DRIVER_CHAR_ZERO
   desc enable Zero char pseudo device, read zeros, eat everything on write
   parent CONFIG_DEVICE
+  provide CONFIG_DRIVER_CHAR
 %config end
 
