new preempt branch

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_ARM_SOCLIB
   desc SoCLib ARM-v6
+  flags harddep
   parent CONFIG_CPU_ARM
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
@@ -16,6 +17,7 @@
 
 %config CONFIG_CPU_ARM_7TDMI
   desc Arm7-TDMI
+  flags harddep
   parent CONFIG_CPU_ARM
   provide CONFIG_CPU_ARM_CPU=arm7tdmi
   provide CONFIG_CPU_ARM_M_PROFILE
