--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_MIPS32EL_SOCLIB
   desc Little endian Mips32 processor
+  flags harddep
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_MIPS_VERSION=32
@@ -15,6 +16,7 @@
 
 %config CONFIG_CPU_MIPS32EB_SOCLIB
   desc Big endian Mips32 processor
+  flags harddep
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_MIPS_VERSION=32
