--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -1,6 +1,7 @@
 
 %config CONFIG_CPU_X86_EMU
   desc Linux Emulation processor support
+  flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_EMU
   provide CONFIG_CPU_WAIT_IRQ
