--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -1,6 +1,7 @@
 
 %config CONFIG_CPU_X86
   desc x86 processors support
+  flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_IBMPC
   provide CONFIG_CPU_CACHE
