--- a/examples/common/build_options.conf
+++ b/examples/common/build_options.conf
@@ -9,6 +9,7 @@
   CONFIG_COMPILE_OPTIMIZE 2
 
 %section release
+  CONFIG_RELEASE
   CONFIG_DEBUG undefined
   CONFIG_LIBC_ASSERT undefined
   CONFIG_COMPILE_DEBUG undefined
@@ -30,3 +31,8 @@
 
 %section ipi
   CONFIG_HEXO_IPI 
+
+%section fpu
+  CONFIG_COMPILE_SOFTFLOAT undefined
+  CONFIG_HEXO_FPU
+
