--- a/libc/libc.config
+++ b/libc/libc.config
@@ -7,8 +7,7 @@
 
 %config CONFIG_LIBC_ASSERT
   desc Enable assert() support
-  when CONFIG_DEBUG
-  default defined
+  when CONFIG_RELEASE!
   parent CONFIG_LIBC
 %config end
 
