--- a/scripts/global.config
+++ b/scripts/global.config
@@ -14,7 +14,7 @@
 %config CONFIG_COMPILE_SOFTFLOAT
   flags root
   desc Use software only floating point
-  default defined
+  when CONFIG_HEXO_FPU!
 %config end
 
 %config CONFIG_COMPILE_COLLECT
@@ -49,6 +49,15 @@
   flags root
   desc Enable debug features globaly
   suggest CONFIG_COMPILE_OPTIMIZE=0
+%config end
+
+%config CONFIG_RELEASE
+  flags root
+  desc Enable release build, disable all debug features
+  suggest CONFIG_COMPILE_OPTIMIZE=2
+  exclude CONFIG_DEBUG
+  exclude CONFIG_COMPILE_DEBUG
+  exclude CONFIG_LIBC_ASSERT
 %config end
 
 %config CONFIG_HET_BUILD
