--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_AVR_ATMEGA128
   desc Provide all configuration tokens suitable for the Atmega128 device.
+  flags harddep
   parent CONFIG_CPU_AVR
   provide CONFIG_RAM_ADDR=0x0100
   provide CONFIG_RAM_SIZE=0xf00
