--- a/cpu/ppc/Makefile
+++ b/cpu/ppc/Makefile
@@ -1,8 +1,5 @@
 
-objs = 											\
-exception.o										\
-cpu_init.o										\
-cpu_context.o
+objs = interrupt.o cpu_init.o cpu_context.o context_switch.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
 objs += boot.o
