--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -4,12 +4,13 @@
 
 %config CONFIG_CPU_PPC_SOCLIB
   desc SoCLib PowerPc 405
+  flags harddep
   parent CONFIG_CPU_PPC
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_SMP_CAPABLE
-  depend CONFIG_COMPILE_SOFTFLOAT
+#  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
 
@@ -31,5 +32,6 @@
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
   provide CONFIG_HEXO_STACK_ALIGN=16
+  require CONFIG_HEXO_STACK_ALIGN>=16
 %config end
 
