--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -17,5 +17,5 @@ doc_headers = \
 	hexo/atomic.h hexo/cpu.h hexo/ipi.h	\
 	hexo/mmu.h hexo/interrupt.h hexo/local.h hexo/error.h		\
 	hexo/endian.h hexo/context.h hexo/iospace.h hexo/segment.h	\
-	hexo/init.h hexo/lock.h hexo/types.h hexo/vmem.h \
+	hexo/init.h hexo/lock.h hexo/types.h hexo/vmem.h hexo/ordering.h \
 
