--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -23,12 +23,27 @@
   parent CONFIG_HEXO
 %config end
 
-%config CONFIG_HEXO_FPU                                                  
-  desc Enables hardware floating points support                          
-  flags auto                                                             
-  parent CONFIG_HEXO                                                     
-  exclude CONFIG_COMPILE_SOFTFLOAT                                       
-%config end                                                              
+%config CONFIG_HEXO_FPU
+  desc Enables hardware floating points support
+  flags auto
+  parent CONFIG_HEXO
+  exclude CONFIG_COMPILE_SOFTFLOAT
+%config end
+
+%config CONFIG_HEXO_LAZY_SWITCH
+  desc Enable optimized partial context switching of extra (fpu and simd) registers
+  default defined
+  parent CONFIG_HEXO
+  depend CONFIG_HEXO_IRQ
+  suggest_when CONFIG_HEXO_IRQ CONFIG_HEXO_FPU
+%config end
+
+%config CONFIG_HEXO_CONTEXT_PREEMPT
+  parent CONFIG_HEXO
+  flags auto
+  desc Enable context switching on interrupts/exceptions
+  depend CONFIG_HEXO_IRQ
+%config end
 
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
