--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -107,7 +107,6 @@
   desc Hexo scheduler feature is enabled
   flags auto
   require CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
-  require CONFIG_MUTEK_SCHEDULER_TMP_STACK_SIZE
   single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
   parent CONFIG_MUTEK
 %config end
@@ -116,7 +115,7 @@
   desc Scheduler is preemptiv
   parent CONFIG_MUTEK_SCHEDULER
   depend CONFIG_DRIVER_TIMER
-  parent CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_HEXO_CONTEXT_PREEMPT
 %config end
 
 %config CONFIG_MUTEK_SCHEDULER_MIGRATION
@@ -142,14 +141,6 @@
   flags value
   parent CONFIG_MUTEK_SCHEDULER
   default 2048
-%config end
-
-%config CONFIG_MUTEK_SCHEDULER_TMP_STACK_SIZE
-  desc Size of the temporary stack allocated for context exit/destroy
-  desc Stack size is specified in stack bytes count.
-  flags value
-  parent CONFIG_MUTEK_SCHEDULER
-  default 256
 %config end
 
 %config CONFIG_MUTEK_SCHEDULER_CANDIDATE_FCN
