--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -12,6 +12,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_MIPS_FPU=64
 %config end
 
 %config CONFIG_CPU_MIPS32EB_SOCLIB
@@ -24,6 +25,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_MIPS_FPU=64
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
@@ -51,7 +53,7 @@
 # Provided tokens, not definable by user directly
 
 %config CONFIG_CPU_MIPS
-  desc MIPS processors support
+  desc Mips processors support
   parent CONFIG_CPU_META
   flags internal private
   module cpu Hexo
@@ -65,6 +67,12 @@
   provide CONFIG_CPU_RESET_SIZE=0x2000
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
   provide CONFIG_HEXO_STACK_ALIGN=8
+%config end
+
+%config CONFIG_CPU_MIPS_FPU
+  desc Mips processor with a 32 bits fpu
+  flags value
+  parent CONFIG_CPU_MIPS
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
