Add dependancy on semaphore in lua_microshell

--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -8,6 +8,7 @@
   CONFIG_PTHREAD
   CONFIG_PTHREAD_STACK_SIZE 8192
   CONFIG_MUTEK_SCHEDULER_STATIC
+  CONFIG_MUTEK_SEMAPHORE
   
   # Libs
   CONFIG_LIBTERMUI
