--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -13,8 +13,6 @@
 
   %subsection simple-arm
     %types cpu
-    CONFIG_CPU_ARM
-  #  CONFIG_CPU_ARM_THUMB
 
     %subsection pf-sam7ex256
       %types platform
@@ -29,7 +27,6 @@
       
       # CONFIG_ARCH_SIMPLE_OLIMEX_SAM7_EX256
       # All-in-one configuration for Olimex SAM7-EX256 dev board
-      CONFIG_ARCH_SIMPLE_HW_INIT
       CONFIG_DRIVER_CHAR_US6089C_UART
       CONFIG_DRIVER_SPI_SPI6088D
       CONFIG_DRIVER_I2C_TWI6061A
@@ -41,7 +38,7 @@
       CONFIG_DRIVER_INPUT_MT5F
       CONFIG_DRIVER_TIMER_PITC_6079A
     
-      CONFIG_ARCH_SIMPLE
+      CONFIG_ARCH_SIMPLE_SAM7
       CONFIG_CPU_ARM_7TDMI
     
       CONFIG_DRIVER_ICU_ARM undefined
