more scheduler/context preempt stuff

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -12,6 +12,20 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_INTERRUPT_STACK
+  desc Use a special stack for interrupts
+  flags auto
+  parent CONFIG_HEXO
+  require CONFIG_HEXO_INTERRUPT_STACK_SIZE
+%config end
+
+%config CONFIG_HEXO_INTERRUPT_STACK_SIZE
+  desc Interrupts stack size
+  flags value
+  default 4096
+  parent CONFIG_HEXO_INTERRUPT_STACK
+%config end
+
 %config CONFIG_HEXO_IPI
   desc Inter processor interrupts support
   flags auto
@@ -41,8 +55,8 @@
 %config CONFIG_HEXO_CONTEXT_PREEMPT
   parent CONFIG_HEXO
   flags auto
-  desc Enable context switching on interrupts/exceptions
-  depend CONFIG_HEXO_IRQ
+  desc Enable context switching on interrupts
+  depend CONFIG_HEXO_INTERRUPT_STACK
 %config end
 
 %config CONFIG_HEXO_USERMODE
