--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -112,7 +112,7 @@
 %config end
 
 %config CONFIG_MUTEK_SCHEDULER_PREEMPT
-  desc Scheduler is preemptiv
+  desc Scheduler preemptive context switch is triggered as a periodic event
   parent CONFIG_MUTEK_SCHEDULER
   depend CONFIG_DRIVER_TIMER
   depend CONFIG_HEXO_CONTEXT_PREEMPT
@@ -120,7 +120,7 @@
 
 %config CONFIG_MUTEK_SCHEDULER_MIGRATION
   desc Scheduler algorithm use permanent context migration among available processors
-  when CONFIG_MUTEK_SCHEDULER_STATIC!
+  default defined
   parent CONFIG_MUTEK_SCHEDULER
 %config end
 
