--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -16,6 +16,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
+  require CONFIG_HEXO_STACK_ALIGN>=8
   provide CONFIG_HEXO_STACK_ALIGN=16
 %config end
 
