--- a/examples/capsule/config
+++ b/examples/capsule/config
@@ -15,6 +15,6 @@
 
 %common
 
-%include ../common/platforms.conf
-%include ../common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
 
