--- a/examples/getline/config
+++ b/examples/getline/config
@@ -10,6 +10,6 @@
   # Libs
   CONFIG_LIBTERMUI
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
