--- a/examples/malloc_stress/config
+++ b/examples/malloc_stress/config
@@ -45,5 +45,5 @@
   CONFIG_LIBCRYPTO
   CONFIG_LIBCRYPTO_CRC32
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
