--- a/examples/splash_ocean_contig/config
+++ b/examples/splash_ocean_contig/config
@@ -16,6 +16,6 @@
   # Libs
   CONFIG_PTHREAD
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
