--- a/examples/hello_het/config
+++ b/examples/hello_het/config
@@ -13,6 +13,6 @@
 # Libs
   CONFIG_PTHREAD
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
