--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -25,8 +25,8 @@
   
   CONFIG_COMPILE_SAVETEMPS
   
-%include ../common/platforms.conf
-%include ../common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
 
 %section emu-*-*
 
