--- a/examples/mjpeg_het/config
+++ b/examples/mjpeg_het/config
@@ -14,8 +14,8 @@
   CONFIG_PTHREAD
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
 %section static
   CONFIG_MUTEK_SCHEDULER_STATIC
