--- a/examples/splash_fft/config
+++ b/examples/splash_fft/config
@@ -15,6 +15,6 @@
   # Libs
   CONFIG_PTHREAD
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
