--- a/examples/vfs_stress/config
+++ b/examples/vfs_stress/config
@@ -28,5 +28,5 @@ CONFIG_LIBC_ASSERT
 
 CONFIG_COMPILE_SAVETEMPS
 
-%include ../common/platforms.conf
-%include ../common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
