--- a/doc/mkdoc.conf
+++ b/doc/mkdoc.conf
@@ -13,6 +13,7 @@
 @setopt multiple_symbol_def
 @setopt multiple_macro_def
 @setopt function_overloading {0}
+@setopt titled_refs
 
 @ifopt doc_format {latex|texinfo}
  @setopt listify_tables
