--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -12,6 +12,20 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_INTERRUPT_STACK
+  desc Use a special stack for interrupts
+  flags auto
+  parent CONFIG_HEXO
+  require CONFIG_HEXO_INTERRUPT_STACK_SIZE
+%config end
+
+%config CONFIG_HEXO_INTERRUPT_STACK_SIZE
+  desc Interrupts stack size
+  flags value
+  default 4096
+  parent CONFIG_HEXO_INTERRUPT_STACK
+%config end
+
 %config CONFIG_HEXO_IPI
   desc Inter processor interrupts support
   flags auto
@@ -23,12 +37,32 @@
   parent CONFIG_HEXO
 %config end
 
-%config CONFIG_HEXO_FPU                                                  
-  desc Enables hardware floating points support                          
-  flags auto                                                             
-  parent CONFIG_HEXO                                                     
-  exclude CONFIG_COMPILE_SOFTFLOAT                                       
-%config end                                                              
+%config CONFIG_HEXO_FPU
+  desc Enables hardware floating points support
+  flags auto
+  parent CONFIG_HEXO
+  exclude CONFIG_COMPILE_SOFTFLOAT
+%config end
+
+%config CONFIG_HEXO_LAZY_SWITCH
+  desc Enable optimized partial context switching of extra (fpu and simd) registers
+  default defined
+  parent CONFIG_HEXO
+  depend CONFIG_HEXO_IRQ
+  suggest_when CONFIG_HEXO_IRQ CONFIG_HEXO_FPU
+%config end
+
+%config CONFIG_HEXO_CONTEXT_PREEMPT
+  parent CONFIG_HEXO
+  flags auto
+  desc Enable context switching on interrupts
+  depend CONFIG_HEXO_INTERRUPT_STACK
+%config end
+
+%config CONFIG_HEXO_CONTEXT_STATS
+  parent CONFIG_HEXO
+  desc Enable context stats collection
+%config end
 
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
