added ppc wait state enable, soclib ppc405 is working with ipis

--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -4,12 +4,15 @@
 
 %config CONFIG_CPU_PPC_SOCLIB
   desc SoCLib PowerPc 405
+  flags harddep
   parent CONFIG_CPU_PPC
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_SMP_CAPABLE
-  depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_PPC_WAIT_MSRWE
+#  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
 
@@ -31,5 +34,18 @@
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
   provide CONFIG_HEXO_STACK_ALIGN=16
+  require CONFIG_HEXO_STACK_ALIGN>=16
+%config end
+
+%config CONFIG_CPU_PPC_WAIT_OPCODE
+  parent CONFIG_CPU_PPC
+  desc PPC processor support power wait instruction (Power ISA 2.0) to enter wait state
+  flags meta
+%config end
+
+%config CONFIG_CPU_PPC_WAIT_MSRWE
+  parent CONFIG_CPU_PPC
+  desc PPC processor support Wait State Enable bit in MSR to enter wait state
+  flags meta
 %config end
 
