Fix dependencies for block devices

--- a/drivers/block/ramdisk/block-ramdisk.config
+++ b/drivers/block/ramdisk/block-ramdisk.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_BLOCK_RAMDISK
   desc enable ramdisk block device support
   parent CONFIG_DEVICE
+  provide CONFIG_DRIVER_BLOCK
   require CONFIG_DRIVER_BLOCK_RAMDISK_SIZE
   require CONFIG_DRIVER_BLOCK_RAMDISK_BLOCKSIZE
 %config end
