--- a/libvfs/fs/iso9660/iso9660.config
+++ b/libvfs/fs/iso9660/iso9660.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_FS_ISO9660
   parent CONFIG_VFS
   desc Iso 9660 file system support
+  depend CONFIG_DRIVER_BLOCK
 %config end
 
 %config CONFIG_DRIVER_FS_ISO9660_ROCKRIDGE
