--- a/examples/mjpeg_het/config
+++ b/examples/mjpeg_het/config
@@ -13,9 +13,11 @@
 # Libs
   CONFIG_PTHREAD
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
+  CONFIG_HEXO_CONTEXT_STATS
+  CONFIG_PTHREAD_STACK_SIZE 8192
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
 
 %section static
   CONFIG_MUTEK_SCHEDULER_STATIC
