--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -6,3 +6,7 @@ endif
 ifeq ($(CONFIG_DRIVER_SPI_SPI6088D), defined)
  subdirs += spi6088d
 endif
+
+ifeq ($(CONFIG_DRIVER_SPI_OC_SPI_CONTROLLER), defined)
+ subdirs += oc_spi_controller
+endif
