--- a/libvfs/fs/fat/fat.config
+++ b/libvfs/fs/fat/fat.config
@@ -3,6 +3,7 @@
   parent CONFIG_VFS
   desc FAT support
   depend CONFIG_DRIVER_FS_FAT16 CONFIG_DRIVER_FS_FAT32
+  depend CONFIG_DRIVER_BLOCK
 %config end
 
 %config CONFIG_DRIVER_FS_FAT16
