--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_MIPS32EL_SOCLIB
   desc Little endian Mips32 processor
+  flags harddep
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_MIPS_VERSION=32
@@ -11,10 +12,12 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_MIPS_FPU=64
 %config end
 
 %config CONFIG_CPU_MIPS32EB_SOCLIB
   desc Big endian Mips32 processor
+  flags harddep
   parent CONFIG_CPU_MIPS
   provide CONFIG_CPU_ENDIAN_BIG
   provide CONFIG_CPU_MIPS_VERSION=32
@@ -22,6 +25,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_MIPS_FPU=64
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
@@ -49,7 +53,7 @@
 # Provided tokens, not definable by user directly
 
 %config CONFIG_CPU_MIPS
-  desc MIPS processors support
+  desc Mips processors support
   parent CONFIG_CPU_META
   flags internal private
   module cpu Hexo
@@ -59,10 +63,17 @@
 
   single CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   require CONFIG_CPU_MIPS_VERSION
+  provide CONFIG_LIBC_STRING_ASM
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
   provide CONFIG_CPU_RESET_SIZE=0x2000
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
   provide CONFIG_HEXO_STACK_ALIGN=8
+%config end
+
+%config CONFIG_CPU_MIPS_FPU
+  desc Mips processor with a 32 bits fpu
+  flags value
+  parent CONFIG_CPU_MIPS
 %config end
 
 %config CONFIG_CPU_MIPS_VERSION
