* Insert entry points before arch_init(), make them handle the FDT stuff and bss initialization.  * Move /chosen node exploration to mutek/main.  * Add a clean way to retrieve original stack pointer

--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -1,6 +1,7 @@
 
 objs = 											\
 arch_init.o										\
+entry_points.o                                  \
 mem_init.o
 
 ifneq ($(CONFIG_SOCLIB_EARLY_CONSOLE),undefined)
@@ -9,10 +10,6 @@ endif
 
 ifeq ($(CONFIG_HEXO_MMU), defined)
 objs += mmu.o
-endif
-
-ifeq ($(CONFIG_SOCLIB_MEMCHECK), defined)
- objs += mem_checker.o
 endif
 
 ifeq ($(LINKING),1)
