Add bootloader tokens

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -66,3 +66,10 @@
   flags value
   parent CONFIG_ARCH_SOCLIB
 %config end
+
+%config CONFIG_ARCH_SOCLIB_BOOTLOADER_MUTEKH
+  desc Support to be bootloaded by MutekH
+  default undefined
+  parent CONFIG_ARCH_SOCLIB
+  provide CONFIG_ARCH_BOOTLOADER
+%config end
