--- a/arch/arch.config
+++ b/arch/arch.config
@@ -22,6 +22,7 @@
   require CONFIG_ARCH_NAME
   single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU CONFIG_ARCH_SIMPLE
   single CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
+  depend CONFIG_ARCH_BOOTLOADER CONFIG_CPU_RESET_HANDLER
 %config end
 
 %config CONFIG_ARCH_SMP_CAPABLE
@@ -104,3 +105,8 @@
   flags	internal value
 %config end
 
+%config CONFIG_ARCH_BOOTLOADER
+  desc  Support for a bootloader
+  parent CONFIG_ARCH_META
+  flags internal meta
+%config end
