--- a/examples/common/build_options.conf
+++ b/examples/common/build_options.conf
@@ -2,11 +2,17 @@
 %section assert
   CONFIG_LIBC_ASSERT
 
+%section noassert
+  CONFIG_LIBC_ASSERT undefined
+
 %section debug
   CONFIG_DEBUG
 
 %else
   CONFIG_COMPILE_OPTIMIZE 2
+
+%section optsize
+  CONFIG_COMPILE_OPTIMIZE s
 
 %section release
   CONFIG_DEBUG undefined
@@ -30,3 +36,25 @@
 
 %section ipi
   CONFIG_HEXO_IPI 
+
+%section cpp
+  CONFIG_UCLIBCPP
+
+%section int
+  CONFIG_HEXO_INTTYPES_DEPRECATED undefined
+
+%section stream
+  CONFIG_LIBC_STREAM
+  CONFIG_LIBC_STREAM_STD
+
+%section vfs
+  CONFIG_VFS
+
+%section vfs_verb
+  CONFIG_VFS_VERBOSE
+
+%section math
+  CONFIG_LIBM
+
+%section collect
+  CONFIG_COMPILE_COLLECT
