--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -9,6 +9,7 @@
   require CONFIG_ARCH_EMU_PAGESIZE
   single CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
   exclude CONFIG_ARCH_CLUSTER
+  provide CONFIG_ARCH_BOOTLOADER
 %config end
 
 %config CONFIG_ARCH_EMU_MEMORY
