--- a/examples/malloc_stress/config
+++ b/examples/malloc_stress/config
@@ -44,6 +44,8 @@
   CONFIG_PTHREAD
   CONFIG_LIBCRYPTO
   CONFIG_LIBCRYPTO_CRC32
+  CONFIG_MUTEK_PRINTK_HEXDUMP
+#  CONFIG_MUTEK_PRINTK_KEEP_EARLY
 
-%include ../common/build_options.conf
-%include ../common/platforms.conf
+%include $(SRC_DIR)/examples/common/build_options.conf
+%include $(SRC_DIR)/examples/common/platforms.conf
