Update Libnetwork:  * Add it to documentation root  * Split headers between std APIs in netinet/ and mutekh APIs in network/  * Add documentation to headers  * Make if_* API homogeneous so that functions all take an interface structure argument

--- a/libnetwork/Makefile
+++ b/libnetwork/Makefile
@@ -35,4 +35,13 @@ ifeq ($(CONFIG_NETWORK_DHCLIENT), defined)
  subdirs += dhclient
 endif
 
-
+doc_headers = netinet/arp.h netinet/ether.h netinet/filter.h		\
+netinet/icmp.h netinet/in.h netinet/ip.h netinet/sockaddr.h			\
+netinet/socket.h netinet/sockios.h netinet/tcp.h netinet/udp.h		\
+network/arp.h network/dhcp.h network/dispatch.h network/icmp.h		\
+network/if.h network/ip.h network/libsocket.h network/libtcp.h		\
+network/libudp.h network/nfs.h network/packet.h network/ping.h		\
+network/protos.h network/route.h network/socket.h					\
+network/socket_hexo.h network/socket_internals.h					\
+network/socket_packet.h network/socket_raw.h network/socket_tcp.h	\
+network/socket_udp.h network/tcp.h network/udp.h
