--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -1,6 +1,7 @@
 
 objs = 											\
 cpu_init.o										\
+context_switch.o								\
 cpu_context.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
