--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -1,6 +1,7 @@
 
 %config CONFIG_CPU_X86
   desc x86 processors support
+  flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_IBMPC
   provide CONFIG_CPU_CACHE
@@ -15,6 +16,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
+  require CONFIG_HEXO_STACK_ALIGN>=8
   provide CONFIG_HEXO_STACK_ALIGN=16
 %config end
 
