MutekH support code for NIOSII processor.

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -97,7 +97,7 @@
   desc	meta configuration token used to impose requirements
   flags	mandatory internal root
   require CONFIG_CPU_NAME
-  single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
+  single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC  CONFIG_CPU_NIOS
   single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
   require CONFIG_CPU_MAXCOUNT>0
 %config end
