--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -51,6 +51,17 @@
     %set BUILD_NAME soclib-ppc
   %end
 
+  %subsection soclib-nios
+    %types cpu
+
+    CONFIG_CPU_NIOS_SOCLIB
+    %set BUILD_NAME soclib-nios
+  
+  CONFIG_COMPILE_SOFTFLOAT undefined
+  CONFIG_ROM_ADDR 0x00802000
+  CONFIG_ROM_SIZE 0x00080000
+  %end
+
   #################################################
   # platforms
 
