Add preliminary support for Arm Cortex M3 cores and TI LM3S microcontrollers

--- a/arch/simple/Makefile
+++ b/arch/simple/Makefile
@@ -9,6 +9,10 @@ ifeq ($(CONFIG_ARCH_SIMPLE_SAM7),defined)
 subdirs+=sam7
 endif
 
+ifeq ($(CONFIG_ARCH_SIMPLE_LM3S),defined)
+subdirs+=lm3s
+endif
+
 ifeq ($(CONFIG_ARCH_SIMPLE_ATMEGA),defined)
 subdirs+=atmega
 endif
