--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -9,6 +9,14 @@
   parent CONFIG_ARCH_SIMPLE
 %config end
 
+%config CONFIG_ARCH_SIMPLE_LM3S
+  desc TI Stellaris ARM Cortex M3 based microcontroller
+  provide CONFIG_ARCH_SIMPLE_RESET_ADDR=0
+#  provide CONFIG_ARCH_SIMPLE_HW_INIT
+  parent CONFIG_ARCH_SIMPLE
+%config end
+
+
 ######################################################################
 # Provided token, not definable by user directly
 
@@ -19,6 +27,7 @@
   parent CONFIG_ARCH_META
 
   when CONFIG_ARCH_SIMPLE_SAM7
+  when CONFIG_ARCH_SIMPLE_LM3S
 
   provide CONFIG_ARCH_NAME=simple
   require CONFIG_ARCH_SIMPLE_RESET_ADDR
