--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -5,18 +5,18 @@ context_switch.o								\
 cpu_context.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
-objs += boot.o exception.o
+objs += boot.o exception.o boot_vector.o
 endif
 
 copy = ldscript
 
 subdirs = libc
 
-ifeq ($(CONFIG_CPU_ARM_THUMB), defined)
-objs += thumb_helpers.o
-exception.o_CFLAGS = -mno-thumb
-cpu_init.o_CFLAGS = -mno-thumb
-boot_m.o_CFLAGS = -mno-thumb
-boot.o_CFLAGS = -mno-thumb
-thumb_helpers.o_CFLAGS = -mno-thumb
-endif
+# ifeq ($(CONFIG_CPU_ARM_THUMB), defined)
+# objs += thumb_helpers.o
+# exception.o_CFLAGS = -mno-thumb
+# cpu_init.o_CFLAGS = -mno-thumb
+# boot_m.o_CFLAGS = -mno-thumb
+# boot.o_CFLAGS = -mno-thumb
+# thumb_helpers.o_CFLAGS = -mno-thumb
+# endif
