--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -27,9 +27,27 @@
   provide CONFIG_CPU_NAME=arm7tdmi
 %config end
 
+%config CONFIG_CPU_ARM_CORTEX_M3
+  desc Arm-Cortex-M3
+  flags harddep
+  parent CONFIG_CPU_ARM
+  provide CONFIG_CPU_ARM_CPU=cortex-m3
+  provide CONFIG_CPU_ARM_M_PROFILE
+  provide CONFIG_CPU_ARM_T_PROFILE
+  provide CONFIG_CPU_ARM_THUMB2_ONLY
+  depend CONFIG_CPU_ARM_THUMB
+  depend CONFIG_COMPILE_SOFTFLOAT
+%config end
+
 %config CONFIG_CPU_ARM_THUMB
   desc ARM Thumb code support
   parent CONFIG_CPU_ARM
+%config end
+
+%config CONFIG_CPU_ARM_THUMB2_ONLY
+  desc ARM Thumb2 only processor
+  parent CONFIG_CPU_ARM
+  flags internal meta
 %config end
 
 %config CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
@@ -48,13 +66,14 @@
 
   when CONFIG_CPU_ARM_SOCLIB
   when CONFIG_CPU_ARM_7TDMI
+  when CONFIG_CPU_ARM_CORTEX_M3
 
   provide CONFIG_CPU_ARCHNAME=arm
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=0x00000400
   provide CONFIG_CPU_EXCEPTION_FIXED_ADDRESS=0x0
-  single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
+  single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI CONFIG_CPU_ARM_CORTEX_M3
   provide CONFIG_HEXO_STACK_ALIGN=8
 %config end
 
