--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -69,6 +69,33 @@
   
     %end
 
+    %subsection pf-lm3s8962evb
+      %types platform
+
+      CONFIG_ARCH_SIMPLE_LM3S
+      # Provide all configuration tokens suitable for the Stellaris devices
+      CONFIG_RAM_ADDR 0x20000000
+      CONFIG_RAM_SIZE 0x00010000
+      CONFIG_ROM_ADDR 0x00000000
+      CONFIG_ROM_SIZE 0x00040000
+      
+      CONFIG_CPU_ARM_CORTEX_M3
+      CONFIG_CPU_ARM_THUMB
+    
+      CONFIG_DRIVER_ICU_ARM undefined
+    
+      CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE 1024
+      CONFIG_PTHREAD_STACK_SIZE 2048
+    
+      %subsection jtag
+        CONFIG_DRIVER_CHAR_SAM7DBGU
+      %end
+  
+      %set BUILD_NAME lm3s8962evb
+  
+    %end
+
+
     %requiretypes platform
 
   %end
