--- a/examples/common/pf_soclib_tutorial_mips32el.dts
+++ b/examples/common/pf_soclib_tutorial_mips32el.dts
@@ -9,38 +9,17 @@
 	cpus {
 		#address-cells = <1>;
 		#size-cells = <0>;
-		Mips,32@0 {
+
+m4_forloop(i, 0, CONFIG_CPU_MAXCOUNT-1, `
+
+		Mips,32@i {
 			name = "Mips,32";
 			device_type = "cpu";
-			reg = <0>;
+			reg = <i>;
 			icudev_type = "cpu:mips";
-			ipi = <&{/xicu@0/out@0} 0>;
+			ipi = <&{/xicu@0/out@i} i>;
 		};
-
-		Mips,32@1 {
-			name = "Mips,32";
-			device_type = "cpu";
-			reg = <1>;
-			icudev_type = "cpu:mips";
-			ipi = <&{/xicu@0/out@1} 1>;
-		};
-
-		Mips,32@2 {
-			name = "Mips,32";
-			device_type = "cpu";
-			reg = <2>;
-			icudev_type = "cpu:mips";
-			ipi = <&{/xicu@0/out@2} 2>;
-		};
-
-		Mips,32@3 {
-			name = "Mips,32";
-			device_type = "cpu";
-			reg = <3>;
-			icudev_type = "cpu:mips";
-			ipi = <&{/xicu@0/out@3} 3>;
-		};
-
+')
 	};
 
 	tty@0 {
@@ -59,37 +38,19 @@
 	xicu@0 {
 	    device_type = "soclib:xicu:root";
 		input_lines = <2>;
-		ipis = <4>;
+		ipis = <8>;
 		timers = <1>;
 		reg = <0xd2200000 0x1000>;
 
-	    	out@0 {
+m4_forloop(i, 0, CONFIG_CPU_MAXCOUNT-1, `
+
+	    	out@i {
 	    	    device_type = "soclib:xicu:filter";
 	    	    parent = &{/xicu@0};
-	    		output_line = <0>;
-	    		irq = <&{/cpus/Mips,32@0} 0>;
+	    		output_line = <i>;
+	    		irq = <&{/cpus/Mips,32@i} 0>;
 	    	};
-	    
-	    	out@1 {
-	    	    device_type = "soclib:xicu:filter";
-	    	    parent = &{/xicu@0};
-	    		output_line = <1>;
-	    		irq = <&{/cpus/Mips,32@1} 0>;
-	    	};
-	    
-	    	out@2 {
-	    	    device_type = "soclib:xicu:filter";
-	    	    parent = &{/xicu@0};
-	    		output_line = <2>;
-	    		irq = <&{/cpus/Mips,32@2} 0>;
-	    	};
-	    
-	    	out@3 {
-	    	    device_type = "soclib:xicu:filter";
-	    	    parent = &{/xicu@0};
-	    		output_line = <3>;
-	    		irq = <&{/cpus/Mips,32@3} 0>;
-	    	};
+')
 	};
 
 	memory@0 {
@@ -100,7 +61,7 @@
 
 	chosen {
 		console = &{/tty@0};
-        timer = &{/xicu@0};
+//        timer = &{/xicu@0};
 	};
 
 };
