added generic pf_soclib_tutorial.dts file

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_ARM_SOCLIB
   desc SoCLib ARM-v6
+  flags harddep
   parent CONFIG_CPU_ARM
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
@@ -12,15 +13,18 @@
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_NAME=armv6k
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
   desc Arm7-TDMI
+  flags harddep
   parent CONFIG_CPU_ARM
   provide CONFIG_CPU_ARM_CPU=arm7tdmi
   provide CONFIG_CPU_ARM_M_PROFILE
 # provide CONFIG_CPU_ARM_T_PROFILE
   depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_NAME=arm7tdmi
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
@@ -45,7 +49,7 @@
   when CONFIG_CPU_ARM_SOCLIB
   when CONFIG_CPU_ARM_7TDMI
 
-  provide CONFIG_CPU_NAME=arm
+  provide CONFIG_CPU_ARCHNAME=arm
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=0x00000400
