--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -97,6 +97,7 @@
   desc	meta configuration token used to impose requirements
   flags	mandatory internal root
   require CONFIG_CPU_NAME
+  require CONFIG_CPU_ARCHNAME
   single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
   single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
   require CONFIG_CPU_MAXCOUNT>0
@@ -106,7 +107,13 @@
 
 %config CONFIG_CPU_NAME
   parent CONFIG_CPU_META
-  desc Processor type name configuration token
+  desc Processor model name configuration token
+  flags	internal value
+%config end
+
+%config CONFIG_CPU_ARCHNAME
+  parent CONFIG_CPU_META
+  desc Processor architecture name configuration token
   flags	internal value
 %config end
 
