--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -13,6 +13,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_PPC_WAIT_MSRWE
 #  depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_NAME=ppc405
 %config end
 
 
@@ -28,7 +29,7 @@
 
   module cpu Hexo
   depend CONFIG_ARCH_SOCLIB
-  provide CONFIG_CPU_NAME=ppc
+  provide CONFIG_CPU_ARCHNAME=ppc
   provide CONFIG_CPU_RESET_ADDR=0xffffff80
   provide CONFIG_CPU_RESET_SIZE=0x80
   provide CONFIG_CPU_ENDIAN_BIG
