--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -6,6 +6,7 @@
   depend CONFIG_ARCH_IBMPC
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86
+  provide CONFIG_CPU_ARCHNAME=x86
   provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
   provide CONFIG_LIBC_STRING_ASM
   provide CONFIG_CPU_RESET_ADDR=0x000ffff0
