--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -4,6 +4,7 @@
 
 %config CONFIG_CPU_AVR_ATMEGA128
   desc Provide all configuration tokens suitable for the Atmega128 device.
+  flags harddep
   parent CONFIG_CPU_AVR
   provide CONFIG_RAM_ADDR=0x0100
   provide CONFIG_RAM_SIZE=0xf00
@@ -13,6 +14,7 @@
   provide CONFIG_CPU_AVR_GCCMCU=atmega128
   provide CONFIG_CPU_AVR_ENHANCED
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_NAME=atmega128
 %config end
 
 ######################################################################
@@ -25,7 +27,7 @@
 
   when CONFIG_CPU_AVR_ATMEGA128
 
-  provide CONFIG_CPU_NAME=avr
+  provide CONFIG_CPU_ARCHNAME=avr
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   require CONFIG_CPU_AVR_IRQ_COUNT
   require CONFIG_CPU_AVR_GCCMCU
