--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -1,10 +1,12 @@
 
 %config CONFIG_CPU_X86_64_EMU
   desc Linux Emulation processor support
+  flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_EMU
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86-64-emu
+  provide CONFIG_CPU_ARCHNAME=x86-64-emu
   provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_NONALIGNED_ACCESS
