--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -1,6 +1,6 @@
 
 ifeq ($(CONFIG_ARCH_SOCLIB),defined)
 ifneq ($(BUILD_NO_FDT),1)
-objs += $(BUILD_platform_name)_$(CONFIG_CPU_NAME).o
+objs += $(BUILD_platform_name).o
 endif
 endif
