--- a/drivers/icu/apic/icu-apic.config
+++ b/drivers/icu/apic/icu-apic.config
@@ -1,10 +1,11 @@
 
 %config CONFIG_DRIVER_ICU_APIC
   desc enable intel APIC interrupt controller support
-  flags auto
+  when CONFIG_ARCH_IBMPC CONFIG_ARCH_SMP
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_CPU_X86
-  # does not depend on CONFIG_HEXO_IRQ because we want to be able to use SMP without IRQs
+  # does not depend on CONFIG_HEXO_IRQ because we want to be able to
+  # use SMP without IRQs as APIC is used to start processors
   provide CONFIG_DRIVER_ICU
   provide CONFIG_DRIVER_ICU_IPI
   parent CONFIG_DEVICE
