Add slab allocator. This is experimental

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -60,3 +60,7 @@ endif
 ifeq ($(CONFIG_ARCH_DEVICE_TREE), defined)
  objs += fdt_consumer.o
 endif
+
+ifeq ($(CONFIG_MUTEK_SLAB), defined)
+ objs += slab_allocator.o
+endif
