Add a pthread spin barrier

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -50,6 +50,11 @@
   when CONFIG_PTHREAD
 %config end
 
+%config CONFIG_PTHREAD_BARRIER_SPIN
+  desc Provide barrier spin implementation
+  parent CONFIG_PTHREAD_BARRIER_ATTR
+%config end
+
 %config CONFIG_PTHREAD_CANCEL
   desc Enable pthread_cancel support
   parent CONFIG_PTHREAD
@@ -72,6 +77,12 @@
   desc Provide pthread mutex attributes support
   parent CONFIG_PTHREAD_MUTEX
   when CONFIG_PTHREAD_MUTEX
+%config end
+
+%config CONFIG_PTHREAD_BARRIER_ATTR
+  desc Provide pthread barrier attributes support
+  parent CONFIG_PTHREAD_BARRIER
+  default undefined
 %config end
 
 %config CONFIG_PTHREAD_ATTRIBUTES
