--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -18,6 +18,12 @@
   parent CONFIG_ARCH_IBMPC
 %config end
 
+%config CONFIG_IBMPC_EARLY_CONSOLE_UART
+  desc Enable early UART text console before device initialization
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  parent CONFIG_ARCH_IBMPC
+%config end
+
 %config CONFIG_ARCH_IBMPC_MEMORY
   desc Set the amount of ram memory. Ram size will be autodetected if this token is diabled.
   flags value
