Fix ramfs truncate mode

--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -42,6 +42,7 @@
       CONFIG_CPU_ARM_7TDMI
     
       CONFIG_DRIVER_ICU_ARM undefined
+      CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
     
       CONFIG_DRIVER_BLOCK_SD_MMC
       CONFIG_DRIVER_ICU_SAM7
