--- a/examples/splash_fft/config
+++ b/examples/splash_fft/config
@@ -15,6 +15,9 @@
   # Libs
   CONFIG_PTHREAD
 
+  CONFIG_PTHREAD_BARRIER_ATTR
+  CONFIG_PTHREAD_BARRIER_SPIN
+
 %include ../common/build_options.conf
 %include ../common/platforms.conf
 
