--- a/arch/simple/sam7/Makefile
+++ b/arch/simple/sam7/Makefile
@@ -1,9 +1,9 @@
 
 objs=sam7.o
 
-ifeq ($(CONFIG_ARCH_SIMPLE_OLIMEX_SAM7_EX256),defined)
+# ifeq ($(CONFIG_ARCH_SIMPLE_OLIMEX_SAM7_EX256),defined)
 objs += sam7_ex256_hw_init.o
-endif
+# endif
 
 ifeq ($(CONFIG_CPU_ARM_THUMB), defined)
 sam7.o_CFLAGS = -mno-thumb
