--- a/examples/hello/config
+++ b/examples/hello/config
@@ -10,6 +10,32 @@
   # Libs
   CONFIG_PTHREAD
 
+%section soclib-*
+ %subsection pf-simple
+  %types platform
+ %end subsection
+
+%common
+
 %include ../common/build_options.conf
 %include ../common/platforms.conf
+
+%section soclib-*
+ %subsection pf-simple
+   # Memory layout
+   CONFIG_RAM_ADDR 0x7f000000
+   CONFIG_RAM_SIZE 0x01000000
+   CONFIG_ROM_ADDR 0x60000000
+   CONFIG_ROM_SIZE 0x00100000
+
+   CONFIG_FDT undefined
+   CONFIG_ARCH_DEVICE_TREE undefined
+   CONFIG_ARCH_HW_INIT_USER defined
+   CONFIG_CPU_MAXCOUNT 1
+
+    CONFIG_MUTEK_PRINTK_KEEP_EARLY
+    CONFIG_SOCLIB_EARLY_CONSOLE
+    CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
+
+ %end subsection
 
