Add config token for memory allocator region automaticinitialization

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -179,6 +179,12 @@
   parent CONFIG_MUTEK
 %config end
 
+%config CONFIG_MUTEK_MEM_REGION_AUTO_INIT
+  desc Enable memory region allocator initialization. If disabled, you need to initialized memory region allocator yourself. 
+  parent CONFIG_MUTEK_MEM_REGION
+  default defined
+%config end
+
 %config CONFIG_MUTEK_MEMALLOC_SIMPLE
   desc Enable use of simple memory allocation algorithm.
   desc Incremental memory allocation without freeing.
