Add early console and icu driver for cm3

--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -48,3 +48,9 @@
   flags value internal
   desc Whether we have an hardware-specific initialization routine
 %config end
+
+%config CONFIG_SIMPLE_EARLY_CONSOLE
+  desc enable SoCLib early console TTY before device initialization
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  parent CONFIG_ARCH_SIMPLE
+%config end
