--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -83,9 +83,11 @@
       CONFIG_CPU_ARM_THUMB
     
       CONFIG_DRIVER_ICU_ARM undefined
-    
+
+      CONFIG_DRIVER_ICU_CM3    
       CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE 1024
       CONFIG_PTHREAD_STACK_SIZE 2048
+      CONFIG_SIMPLE_EARLY_CONSOLE
     
       %subsection jtag
         CONFIG_DRIVER_CHAR_SAM7DBGU
