--- a/arch/simple/Makefile
+++ b/arch/simple/Makefile
@@ -3,7 +3,8 @@ objs =											\
 arch_init.o										\
 entry_points.o										\
 mem_init.o \
-hw_init.o
+hw_init.o \
+early_console.o
 
 ifeq ($(CONFIG_ARCH_SIMPLE_SAM7),defined)
 subdirs+=sam7
