Add cpu name config token for cortex M3

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -37,6 +37,7 @@
   provide CONFIG_CPU_ARM_THUMB2_ONLY
   depend CONFIG_CPU_ARM_THUMB
   depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_NAME=cortex-m3
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
