Use ARM ICU as the entry point for interrupts

--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -82,7 +82,7 @@
       CONFIG_CPU_ARM_CORTEX_M3
       CONFIG_CPU_ARM_THUMB
     
-      CONFIG_DRIVER_ICU_ARM undefined
+      CONFIG_DRIVER_ICU_ARM
 
       CONFIG_DRIVER_ICU_CM3    
       CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE 1024
