--- a/doc/mkdoc.conf
+++ b/doc/mkdoc.conf
@@ -9,7 +9,7 @@
 @setopt show_type_keyword
 @setopt show_module_subtitle
 @c @setopt hide_internal
-@setopt source_url_template {https://www.mutek.fr/trac/mutekh/browser/trunk/mutekh/@f?rev=@r#L@n}
+@setopt source_url_template {https://www.mutekh.org/trac/mutekh/browser/hg/@f?rev=@r#L@n}
 @setopt multiple_symbol_def
 @setopt multiple_macro_def
 @setopt function_overloading {0}
