Now tinygl compiles without too much warnings

--- a/libtinygl/tinygl.config
+++ b/libtinygl/tinygl.config
@@ -5,10 +5,10 @@
     module libtinygl
     flags auto
     depend CONFIG_LIBM
+    depend CONFIG_LIBC_STREAM_STD
 %config end
 
 %config CONFIG_LIBTINYGL_FB
     parent CONFIG_LIBTINYGL
     desc Use the framebuffer device as backend for TinyGL
-    flags auto
 %config end
