--- a/libtinygl/Makefile
+++ b/libtinygl/Makefile
@@ -1,8 +1,9 @@
 objs = api.o list.o vertex.o init.o matrix.o texture.o \
 	   misc.o clear.o light.o clip.o select.o get.o error.o \
 	   zbuffer.o zline.o zdither.o ztriangle.o \
-	   zmath.o image_util.o oscontext.o msghandling.o \
+	   zmath.o image_util.o msghandling.o \
 	   arrays.o specbuf.o memory.o
+#objs += oscontext.o
 
 #ifeq ($(CONFIG_LIBTINYGL_FB), defined)
 #objs += glfb.o
