First version for vgafg support

--- a/libtinygl/tinygl.config
+++ b/libtinygl/tinygl.config
@@ -8,7 +8,7 @@
     depend CONFIG_LIBC_STREAM_STD
 %config end
 
-%config CONFIG_LIBTINYGL_FB
+%config CONFIG_LIBTINYGL_VGAFB
     parent CONFIG_LIBTINYGL
-    desc Use the framebuffer device as backend for TinyGL
+    desc Use the VGA (mode 13h) framebuffer device as backend for TinyGL
 %config end
