changed nios context switch to preempt style, no irq yet

--- a/cpu/nios/nios.config
+++ b/cpu/nios/nios.config
@@ -9,7 +9,7 @@
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
   provide CONFIG_CPU_SMP_CAPABLE  
-  provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_NAME=nios2
 %config end
 
 
@@ -24,12 +24,13 @@
   when CONFIG_CPU_NIOS_SOCLIB
 
   module cpu Hexo
+  provide CONFIG_CPU_ARCHNAME=nios
   depend CONFIG_ARCH_SOCLIB
-  provide CONFIG_CPU_NAME=nios
   provide CONFIG_CPU_RESET_ADDR=0x00802000
   provide CONFIG_CPU_RESET_SIZE=0x1000
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
   provide CONFIG_HEXO_STACK_ALIGN=8
+  exclude CONFIG_HEXO_FPU
 %config end
 
