--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -51,6 +51,13 @@
     %set BUILD_NAME soclib-ppc
   %end
 
+  %subsection soclib-nios
+    %types cpu
+
+    CONFIG_CPU_NIOS_SOCLIB
+    %set BUILD_NAME soclib-nios
+  %end
+
   #################################################
   # platforms
 
