still make the example parametrizable but without breaking anything

--- a/examples/tinygl_demo/Makefile
+++ b/examples/tinygl_demo/Makefile
@@ -1,10 +1,3 @@
 
 objs = vgafb.o
-
-ifeq ($(CONFIG_DEMO_TINYGL_GEARS), defined)
-objs += gears.o
-endif
-
-ifeq ($(CONFIG_DEMO_TINYGL_SPIN), defined)
-objs += spin.o
-endif
+objs += $(BUILD_DEMO_NAME).o
