added cecill2 license

--- a/scripts/license.config
+++ b/scripts/license.config
@@ -66,6 +66,13 @@
   exclude CONFIG_LICENSE_USE_PROPRIETARY
 %config end
 
+%config CONFIG_LICENSE_USE_CECILL2
+  parent CONFIG_LICENSE_META
+  desc This token will be defined if using CeCILL2 licensed code in the kernel with current configuration
+  flags meta
+  exclude CONFIG_LICENSE_USE_PROPRIETARY
+%config end
+
 %config CONFIG_LICENSE_USE_GPL3
   parent CONFIG_LICENSE_META
   desc This token will be defined if using GPLv3 licensed code in the kernel with current configuration
