added some time.h functions

--- a/examples/lua_microshell/Makefile
+++ b/examples/lua_microshell/Makefile
@@ -23,7 +23,7 @@ objs += lcd.o
 endif
 endif
 
-ifeq ($(CONFIG_MUTEK_TIMERMS),defined)
+ifeq ($(CONFIG_MUTEK_TIMER),defined)
 objs += timer.o
 endif
 
