--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_NETWORK
   desc Enable network support
-  depend CONFIG_MUTEK_TIMERMS
+  depend CONFIG_MUTEK_TIMER
   depend CONFIG_MUTEK_SCHEDULER
   depend CONFIG_MUTEK_SEMAPHORE
   module libnetwork
