--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -25,10 +25,24 @@
   flags meta
 %config end
 
-%config CONFIG_MUTEK_TIMERMS
-  desc Provide a general purpose milliseconds timer object
+%config CONFIG_MUTEK_TIMER
+  desc Provide a general purpose fraction of second timer
   when CONFIG_DRIVER_TIMER
+  require CONFIG_MUTEK_TIMER_UNIT
   parent CONFIG_MUTEK
+%config end
+
+%config CONFIG_MUTEK_TIMER_UNIT
+  desc Specify base unit used by general purpose timer in second
+  flags value
+  default 1e-3
+  parent CONFIG_MUTEK_TIMER
+%config end
+
+%config CONFIG_MUTEK_TIMER_EVENTS
+  desc Specify that general purpose timer must handle events
+  default defined
+  parent CONFIG_MUTEK_TIMER
 %config end
 
 %config CONFIG_MUTEK_LOGO
