--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -40,7 +40,8 @@
 %config end
 
 %config CONFIG_MUTEK_TIMER_EVENTS
-  desc Specify that general purpose timer must handle events
+  desc Specify that general purpose timer handle events
+  desc (timer may only be used to read timestamp values)
   default defined
   parent CONFIG_MUTEK_TIMER
 %config end
