added pthread_cond_timedwait implementation

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -117,3 +117,8 @@
   default 1
 %config end
 
+%config CONFIG_PTHREAD_TIME
+  desc Provide support for timed primitives
+  parent CONFIG_PTHREAD
+  depend CONFIG_MUTEK_TIMER_EVENTS
+%config end
