--- a/arch/emu/Makefile
+++ b/arch/emu/Makefile
@@ -2,7 +2,8 @@
 objs =											\
 arch_init.o										\
 mem_init.o \
-hw_init.o
+hw_init.o \
+power.o
 
 ifeq ($(CONFIG_ARCH_EMU_DARWIN),defined)
 objs += darwin_before.o darwin_after.o
