--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -2,7 +2,8 @@
 objs =											\
 arch_init.o										\
 mem_init.o \
-hw_init.o
+hw_init.o \
+power.o
 
 ifeq ($(CONFIG_ARCH_IBMPC_DMA), defined)
 objs += dma-8237.o
