--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -2,7 +2,8 @@
 objs = 											\
 arch_init.o										\
 entry_points.o                                  \
-mem_init.o
+mem_init.o \
+power.o
 
 ifneq ($(CONFIG_SOCLIB_EARLY_CONSOLE),undefined)
 objs += early_console.o
