--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -13,13 +13,29 @@
 %config end
 
 %config CONFIG_IBMPC_EARLY_CONSOLE_VGA
-  desc enable early vga text console before device initialization
+  desc Enable early text console before real drivers init.
+  desc Text output will be written to vga text buffer at 0xb8000.
   provide CONFIG_MUTEK_EARLY_CONSOLE
   parent CONFIG_ARCH_IBMPC
 %config end
 
 %config CONFIG_IBMPC_EARLY_CONSOLE_UART
-  desc Enable early UART text console before device initialization
+  desc Enable early text console before real drivers init.
+  desc Text output will be sent to 16550 UART.
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  parent CONFIG_ARCH_IBMPC
+%config end
+
+%config CONFIG_IBMPC_EARLY_CONSOLE_UART_PORT
+  desc Defines early console 16550 UART port address.
+  parent CONFIG_IBMPC_EARLY_CONSOLE_UART
+  flags value
+  default 0x3f8
+%config end
+
+%config CONFIG_IBMPC_EARLY_CONSOLE_E9HACK
+  desc Enable early text console before real drivers init.
+  desc Text output will be written to 0xe9 port, supported by Qemu and Bochs emulators.
   provide CONFIG_MUTEK_EARLY_CONSOLE
   parent CONFIG_ARCH_IBMPC
 %config end
