--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -51,7 +51,7 @@
     %set BUILD_NAME soclib-ppc
   %end
 
-  %subsection soclib-nios
+  %subsection soclib-nios soclib-nios2
     %types cpu
 
     CONFIG_CPU_NIOS_SOCLIB
